Updates openapi.yaml and updated errorMessages in Controllers to match api's documentation
